Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -51,14 +51,13 @@
     <section id="chatbot">
       <h2>🤖 AI Safety Assistant</h2>
       <p>Ask our AI chatbot for help, safety tips, or information about your trip.</p>
-      <iframe 
-        src="https://claribelgilsosa23-safe-from-earthquake-ai-4e480f0.hf.space" 
-        frameborder="0" 
-        width="100%" 
-        height="500"
-        title="Safe Taxi AI Chatbot">
-      </iframe>
-    </section>
+      <iframe
+	src="https://claribelgilsosa23-your-safe-taxi.hf.space"
+	frameborder="0"
+	width="850"
+	height="450"
+></iframe>
+
   </main>
 
   <footer>
