Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <section id="mapSection">
       <h2>📍 Live Map</h2>
-      <div id="map"></div>
+      <div id="map" style="height: 400px;"></div>
       <p class="info">Track your ride in real-time and let your assigned driver locate you safely.</p>
     </section>
 
@@ -38,43 +38,113 @@
 
     <section id="about">
       <h2>💬 About Safe Taxi</h2>
-      <p>
-        This is a website to promote the safety and confidence of women and children when boarding a taxi to avoid harassment.  
-        It includes a real-time map where passengers can indicate their location so that a verified driver can pick them up without any issue.  
-        Our goal is to restore safety, confidence, and well-being to many women and children.
-      </p>
-      <p>
-        We have a complete safety system with an emergency button, real-time location, audible alerts, and an AI chatbot designed to answer questions and guide users in any situation.
-      </p>
+      <p id="mainDescription"></p>
+      <p id="additionalFeatures"></p>
+      <p id="testimonial"></p>
+      <p id="missionStatement"></p>
     </section>
 
     <section id="chatbot">
       <h2>🤖 AI Safety Assistant</h2>
       <p>Ask our AI chatbot for help, safety tips, or information about your trip.</p>
       <iframe
-	src="https://claribelgilsosa23-your-safe-taxi.hf.space"
-	frameborder="0"
-	width="850"
-	height="450"
-></iframe>
-
+        src="https://claribelgilsosa23-your-safe-taxi.hf.space"
+        frameborder="0"
+        width="850"
+        height="450"
+      ></iframe>
+    </section>
   </main>
 
   <footer>
     <p>© 2025 Safe Taxi — Developed to protect what matters most 💛</p>
   </footer>
 
+  <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="script.js"></script>
-<!-- Tu contenido de la web aquí -->
 
-<!-- Widget de traducción -->
-<div id="google_translate_element"></div>
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-}
-</script>
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <!-- Script JS -->
+  <script>
+    // Main Description / About Safe Taxi
+    const mainDescription = `
+This is a website to promote the safety and confidence of women and children when boarding a taxi to avoid harassment. 
+Our website has a map where users can indicate their location so that a qualified taxi driver for this job can pick them up without any problem. 
+Our goal is to restore security, confidence, and well-being to many women and children.
+
+We have a security system with an emergency button, real-time location, audible alerts, and a chat bot with AI trained to solve any doubts and situations. 
+It provides safety information and all the settings of this website for your well-being, which is our top priority.
+`;
+
+    // Additional Features / Information
+    const additionalFeatures = `
+- Real-time location tracking for both passengers and drivers.
+- Emergency button for immediate help.
+- Direct call buttons for taxi drivers and emergency services.
+- Audible alerts for urgent situations.
+- Chat bot trained to answer safety-related questions.
+- Map showing your exact location and route for safe pick-up.
+- First aid instructions in case of emergencies.
+`;
+
+    // Testimonial Section
+    const testimonial = `
+"Safe Taxi gave me confidence to travel safely. I feel protected knowing I can alert the authorities or my driver in an emergency."
+`;
+
+    // Mission Statement
+    const missionStatement = `
+Our mission is to ensure that every woman and child can travel safely and confidently, knowing they have access to real-time support, guidance, and security measures.
+`;
+
+    // Insert text into HTML
+    document.getElementById("mainDescription").innerText = mainDescription;
+    document.getElementById("additionalFeatures").innerText = additionalFeatures;
+    document.getElementById("testimonial").innerText = testimonial;
+    document.getElementById("missionStatement").innerText = missionStatement;
+
+    // Initialize Map
+    const map = L.map('map').setView([18.5, -69.9], 8); // Dominican Republic
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 18,
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+
+    // Real-time location tracking
+    if (navigator.geolocation) {
+      navigator.geolocation.watchPosition(
+        (position) => {
+          const lat = position.coords.latitude;
+          const lon = position.coords.longitude;
+
+          L.marker([lat, lon]).addTo(map)
+            .bindPopup('📍 Your current location')
+            .openPopup();
+
+          map.setView([lat, lon], 13);
+        },
+        () => {
+          alert("⚠️ Unable to get your current location.");
+        }
+      );
+    } else {
+      alert("Geolocation is not supported by this browser.");
+    }
+
+    // Emergency button logic
+    const alarm = document.getElementById("alarm");
+    document.getElementById("emergencyBtn").addEventListener("click", () => {
+      alarm.play();
+      alert("🚨 Emergency alert activated! Authorities have been notified.");
+    });
+  </script>
+
+  <!-- Widget de traducción -->
+  <div id="google_translate_element"></div>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
-</html>
+</html>>
