--- a/index.html
+++ b/index.html
@@ -214,6 +214,22 @@
       alert("🚨 Emergency alert activated! Authorities have been notified.");
     });
   </script>
+// Emergency button logic
+    const alarm = document.getElementById("alarm");
+    document.getElementById("emergencyBtn").addEventListener("click", () => {
+      alarm.play();
+      alert("🚨 Emergency alert activated! Authorities have been notified.");
+    });
+  </script>
+<!-- Tu contenido de la web aquí -->
 
+<!-- Widget de traducción -->
+<div id="google_translate_element"></div>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
