Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -214,12 +214,10 @@
       alert("🚨 Emergency alert activated! Authorities have been notified.");
     });
   </script>
-// Emergency button logic
-    const alarm = document.getElementById("alarm");
-    document.getElementById("emergencyBtn").addEventListener("click", () => {
-      alarm.play();
-      alert("🚨 Emergency alert activated! Authorities have been notified.");
-    });
+<footer>
+  <p>© 2025 Safe Taxi — Developed to protect what matters most 💛</p>
+  <p>Created by <a href="https://github.com/Claribel-Gilsosa" target="_blank">Claribel Gil Sosa</a></p>
+</footer>
   </script>
 <!-- Tu contenido de la web aquí -->
 
