--- a/index.html
+++ b/index.html
@@ -225,5 +225,63 @@ function googleTranslateElementInit() {
 }
 </script>
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<!-- Gemini API Chat -->
+<section id="geminiChat">
+  <h2>AI Assistant (Gemini API)</h2>
+  <div>
+    <textarea id="geminiInput" placeholder="Escribe tu mensaje aquí..." rows="3" style="width:100%;"></textarea>
+    <button id="geminiSend">Enviar</button>
+  </div>
+  <div id="geminiOutput" style="margin-top:10px; background:#f1f1f1; padding:10px; border-radius:8px; max-height:300px; overflow-y:auto;">
+    <!-- Respuestas aparecerán aquí -->
+  </div>
+</section>
+
+<script>
+  const geminiApiKey = "AIzaSyCkqCF6x3ppDhgm2HVC96qm4m74T0MeHNk"; // tu clave
+  const geminiSendBtn = document.getElementById("geminiSend");
+  const geminiInput = document.getElementById("geminiInput");
+  const geminiOutput = document.getElementById("geminiOutput");
+
+  async function sendGeminiMessage(message) {
+    try {
+      const response = await fetch("https://gen.googleapis.com/v1beta2/projects/gen-lang-client-0479254864:generateMessage", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": `Bearer ${geminiApiKey}`
+        },
+        body: JSON.stringify({
+          prompt: message,
+          model: "gemini-1",
+          temperature: 0.7
+        })
+      });
+      const data = await response.json();
+      const answer = data.candidates?.[0]?.content || "No response";
+      const p = document.createElement("p");
+      p.textContent = "Gemini: " + answer;
+      geminiOutput.appendChild(p);
+      geminiOutput.scrollTop = geminiOutput.scrollHeight;
+    } catch (err) {
+      console.error(err);
+      const p = document.createElement("p");
+      p.textContent = "Error al contactar Gemini API";
+      geminiOutput.appendChild(p);
+    }
+  }
+
+  geminiSendBtn.addEventListener("click", () => {
+    const message = geminiInput.value.trim();
+    if(message){
+      const p = document.createElement("p");
+      p.textContent = "Tú: " + message;
+      geminiOutput.appendChild(p);
+      geminiOutput.scrollTop = geminiOutput.scrollHeight;
+      geminiInput.value = "";
+      sendGeminiMessage(message);
+    }
+  });
+</script>
 </body>
 </html>
