--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Safe Taxi 🚖</title>
+  <title>Safe Taxi</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
     body {
@@ -71,18 +71,12 @@
       cursor: pointer;
       font-size: 1.1rem;
       transition: background-color 0.3s;
+      margin-top: 5px;
+      margin-right: 5px;
     }
 
     button:hover {
       background-color: #c82333;
-    }
-
-    #chatbot-container {
-      border: 3px dashed #007bff;
-      border-radius: 15px;
-      padding: 1rem;
-      text-align: center;
-      background-color: #e9f2ff;
     }
 
     iframe {
@@ -93,42 +87,59 @@
       border: 2px solid #007bff;
     }
 
+    #geminiChat textarea {
+      width: 100%;
+      padding: 0.5rem;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      margin-bottom: 0.5rem;
+      resize: none;
+    }
+
+    #geminiOutput {
+      margin-top:10px;
+      background:#f1f1f1;
+      padding:10px;
+      border-radius:8px;
+      max-height:300px;
+      overflow-y:auto;
+    }
+
     footer {
       text-align: center;
       padding: 1.5rem;
       background-color: #007bff;
       color: white;
     }
-
   </style>
 </head>
 <body>
   <header>
-    <h1>🚖 Safe Taxi</h1>
+    <h1>Safe Taxi</h1>
     <p>Your safety is our priority — Real-time tracking, emergency alerts, and secure rides for women and children.</p>
   </header>
 
   <main>
     <!-- Map Section -->
     <section id="mapSection">
-      <h2>📍 Live Map</h2>
+      <h2>Live Map</h2>
       <div id="map"></div>
       <p>Track your ride in real-time and let your assigned driver locate you safely.</p>
     </section>
 
     <!-- Drivers Section -->
     <section id="drivers">
-      <h2>🚗 Available Taxi Drivers</h2>
+      <h2>Available Taxi Drivers</h2>
       <ul>
-        <li><b>John Doe:</b> <a href="tel:+18091234567">📞 Call</a></li>
-        <li><b>Maria Lopez:</b> <a href="tel:+18099876543">📞 Call</a></li>
-        <li><b>David Johnson:</b> <a href="tel:+18093456789">📞 Call</a></li>
+        <li><b>John Doe:</b> <a href="tel:+18091234567">Call</a></li>
+        <li><b>Maria Lopez:</b> <a href="tel:+18099876543">Call</a></li>
+        <li><b>David Johnson:</b> <a href="tel:+18093456789">Call</a></li>
       </ul>
     </section>
 
     <!-- Emergency Section -->
     <section id="emergencySection">
-      <h2>🚨 Emergency</h2>
+      <h2>Emergency</h2>
       <p>If you feel unsafe, press the button below to activate the alarm and alert nearby authorities.</p>
       <button id="emergencyBtn">Activate Emergency Alert</button>
       <audio id="alarm" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg"></audio>
@@ -136,51 +147,39 @@
 
     <!-- About Section -->
     <section id="about">
-      <h2>💬 About Safe Taxi</h2>
-      <p>This website promotes the safety and confidence of women and children when boarding a taxi to avoid harassment. </p>
+      <h2>About Safe Taxi</h2>
+      <p>This website promotes the safety and confidence of women and children when boarding a taxi to avoid harassment.</p>
       <p>It includes a real-time map where passengers can indicate their location so that a verified driver can pick them up safely.</p>
-      <p>Our system combines real-time tracking, emergency alerts, audible alarms, and an AI chatbot trained to provide safety guidance.</p>
+      <p>Our system combines real-time tracking, emergency alerts, audible alarms, and AI chat assistants.</p>
     </section>
 
-    <!-- Additional Features -->
-    <section id="features">
-      <h2>✨ Features</h2>
-      <ul>
-        <li>Real-time location tracking for passengers and drivers.</li>
-        <li>Emergency button for immediate help.</li>
-        <li>Direct call buttons for taxi drivers and emergency services.</li>
-        <li>Audible alerts for urgent situations.</li>
-        <li>AI chatbot trained to answer safety-related questions.</li>
-        <li>Map showing exact location and route for safe pick-up.</li>
-        <li>First aid instructions in case of emergencies.</li>
-      </ul>
-    </section>
-
-    <!-- Testimonial -->
-    <section id="testimonial">
-      <h2>🌟 Testimonial</h2>
-      <p>"Safe Taxi gave me confidence to travel safely. I feel protected knowing I can alert the authorities or my driver in an emergency."</p>
-    </section>
-
-    <!-- Mission Statement -->
-    <section id="mission">
-      <h2>🎯 Mission Statement</h2>
-      <p>Our mission is to restore security, confidence, and well-being to women and children everywhere by providing a safe, reliable, and intelligent taxi service.</p>
-    </section>
-
-    <!-- Chatbot -->
+    <!-- Chatbot Section (HF Space) -->
     <section id="chatbot-container">
-      <h2>🤖 AI Safety Assistant</h2>
-      <p>Ask our AI chatbot for help, safety tips, or information about your trip.</p>
+      <h2>AI Safety Assistant</h2>
       <iframe src="https://claribelgilsosa23-your-safe-taxi.hf.space" frameborder="0"></iframe>
     </section>
+
+    <!-- Gemini API Chat Section -->
+    <section id="geminiChat">
+      <h2>AI Assistant (Gemini API)</h2>
+      <div>
+        <textarea id="geminiInput" placeholder="Escribe tu mensaje aquí..." rows="3"></textarea>
+        <button id="geminiSend">Enviar</button>
+      </div>
+      <div id="geminiOutput"></div>
+    </section>
   </main>
+
+  <footer>
+    <p>© 2025 Safe Taxi — Developed to protect what matters most</p>
+    <p>Created by <a href="https://github.com/Claribel-Gilsosa" target="_blank">Claribel Gil Sosa</a></p>
+  </footer>
 
   <!-- Scripts -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
     // Initialize Map
-    const map = L.map('map').setView([18.5, -69.9], 8); // Dominican Republic example
+    const map = L.map('map').setView([18.5, -69.9], 8);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 18,
       attribution: '&copy; OpenStreetMap contributors'
@@ -193,11 +192,11 @@
           const lat = position.coords.latitude;
           const lon = position.coords.longitude;
           L.marker([lat, lon]).addTo(map)
-            .bindPopup('📍 Your current location')
+            .bindPopup('Your current location')
             .openPopup();
           map.setView([lat, lon], 13);
         },
-        () => { alert("⚠️ Unable to get your current location."); }
+        () => { alert("Unable to get your current location."); }
       );
     } else {
       alert("Geolocation is not supported by this browser.");
@@ -207,81 +206,57 @@
     const alarm = document.getElementById("alarm");
     document.getElementById("emergencyBtn").addEventListener("click", () => {
       alarm.play();
-      alert("🚨 Emergency alert activated! Authorities have been notified.");
+      alert("Emergency alert activated! Authorities have been notified.");
     });
   </script>
-<footer>
-  <p>© 2025 Safe Taxi — Developed to protect what matters most 💛</p>
-  <p>Created by <a href="https://github.com/Claribel-Gilsosa" target="_blank">Claribel Gil Sosa</a></p>
-</footer>
+
+  <!-- Gemini API Chat Script -->
+  <script>
+    const geminiApiKey = "AIzaSyCkqCF6x3ppDhgm2HVC96qm4m74T0MeHNk"; // tu clave
+    const geminiSendBtn = document.getElementById("geminiSend");
+    const geminiInput = document.getElementById("geminiInput");
+    const geminiOutput = document.getElementById("geminiOutput");
+
+    async function sendGeminiMessage(message) {
+      try {
+        const response = await fetch("https://gen.googleapis.com/v1beta2/projects/gen-lang-client-0479254864:generateMessage", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization": `Bearer ${geminiApiKey}`
+          },
+          body: JSON.stringify({
+            prompt: message,
+            model: "gemini-1",
+            temperature: 0.7
+          })
+        });
+
+        const data = await response.json();
+        const answer = data.candidates?.[0]?.content || "No response";
+        const p = document.createElement("p");
+        p.textContent = "Gemini: " + answer;
+        geminiOutput.appendChild(p);
+        geminiOutput.scrollTop = geminiOutput.scrollHeight;
+      } catch (err) {
+        console.error(err);
+        const p = document.createElement("p");
+        p.textContent = "Error al contactar Gemini API";
+        geminiOutput.appendChild(p);
+      }
+    }
+
+    geminiSendBtn.addEventListener("click", () => {
+      const message = geminiInput.value.trim();
+      if(message){
+        const p = document.createElement("p");
+        p.textContent = "Tú: " + message;
+        geminiOutput.appendChild(p);
+        geminiOutput.scrollTop = geminiOutput.scrollHeight;
+        geminiInput.value = "";
+        sendGeminiMessage(message);
+      }
+    });
   </script>
-<!-- Tu contenido de la web aquí -->
-
-<!-- Widget de traducción -->
-<div id="google_translate_element"></div>
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-}
-</script>
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<!-- Gemini API Chat -->
-<section id="geminiChat">
-  <h2>AI Assistant (Gemini API)</h2>
-  <div>
-    <textarea id="geminiInput" placeholder="Escribe tu mensaje aquí..." rows="3" style="width:100%;"></textarea>
-    <button id="geminiSend">Enviar</button>
-  </div>
-  <div id="geminiOutput" style="margin-top:10px; background:#f1f1f1; padding:10px; border-radius:8px; max-height:300px; overflow-y:auto;">
-    <!-- Respuestas aparecerán aquí -->
-  </div>
-</section>
-
-<script>
-  const geminiApiKey = "AIzaSyCkqCF6x3ppDhgm2HVC96qm4m74T0MeHNk"; // tu clave
-  const geminiSendBtn = document.getElementById("geminiSend");
-  const geminiInput = document.getElementById("geminiInput");
-  const geminiOutput = document.getElementById("geminiOutput");
-
-  async function sendGeminiMessage(message) {
-    try {
-      const response = await fetch("https://gen.googleapis.com/v1beta2/projects/gen-lang-client-0479254864:generateMessage", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": `Bearer ${geminiApiKey}`
-        },
-        body: JSON.stringify({
-          prompt: message,
-          model: "gemini-1",
-          temperature: 0.7
-        })
-      });
-      const data = await response.json();
-      const answer = data.candidates?.[0]?.content || "No response";
-      const p = document.createElement("p");
-      p.textContent = "Gemini: " + answer;
-      geminiOutput.appendChild(p);
-      geminiOutput.scrollTop = geminiOutput.scrollHeight;
-    } catch (err) {
-      console.error(err);
-      const p = document.createElement("p");
-      p.textContent = "Error al contactar Gemini API";
-      geminiOutput.appendChild(p);
-    }
-  }
-
-  geminiSendBtn.addEventListener("click", () => {
-    const message = geminiInput.value.trim();
-    if(message){
-      const p = document.createElement("p");
-      p.textContent = "Tú: " + message;
-      geminiOutput.appendChild(p);
-      geminiOutput.scrollTop = geminiOutput.scrollHeight;
-      geminiInput.value = "";
-      sendGeminiMessage(message);
-    }
-  });
-</script>
 </body>
 </html>
